@@ -61,7 +61,7 @@
       <item row="5" column="1">
        <widget class="QLabel" name="myGridLabel">
         <property name="text">
-         <string>My Grid</string>
+         <string>My Gridsquare</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
